[package]
name = "grep_lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"                                        #读取命令行输入
data-encoding = "2.5.0"
error-chain = "0.12.4"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "^1"
ring = "0.17.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
