[package]
name = "grep_lite"
version = "0.1.0"
edition = "2021"
# build = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# candle-core = "0.3.2"
clap = {git = "https://github.com/clap-rs/clap.git", branch="v2-master"}  #读取命令行输入
regex = {git = "https://github.com/rust-lang/regex.git", branch="master"}
